--- a/index.html
+++ b/index.html
@@ -1812,7 +1812,7 @@ function generateWhatsAppReport(data) {
       <div class="whatsapp-report-header">
         <img src="${LOGO_URL}" alt="Logo Klinik" class="whatsapp-report-logo" onerror="this.src='https://via.placeholder.com/50x50.png?text=KS'">
         <div>
-          <div class="whatsapp-report-title">Laporan Saringan NADI</div>
+          <div class="whatsapp-report-title">Laporan Saringan Kesihatan Bersama NADI</div>
           <div class="whatsapp-report-subtitle">Klinik SihatSokmo - Program PEKA B40</div>
         </div>
       </div>
