--- a/index.html
+++ b/index.html
@@ -2484,4 +2484,4 @@ document.addEventListener('DOMContentLoaded', ()=>{
 });
   </script>
 </body>
-</html> "berdasarkan rumus ini saya mahu TAHU APA PUNCA EXCELL SAYA GAGAL DI UPLOAD?
+</html>
